--- a/src/css/main.css
+++ b/src/css/main.css
@@ -54,11 +54,17 @@ header .main { padding: 0; }
 header .main .brand { float: left; padding: 1rem 1.5rem; }
 header .main ul { text-align: right; }
 header .main ul li { display: inline-block; border-left: 1px solid #f0ede9; }
-header .main ul li a { display: inline-block; padding: 0 3rem; line-height: 5.5rem; font-size: 1.6rem; font-weight: bold; color: #7c7a65; text-decoration: none; }
+header .main ul li a { display: inline-block; padding: 0 2.5rem; line-height: 5.5rem; font-size: 1.6rem; font-weight: bold; color: #7c7a65; text-decoration: none; }
 header .main ul li a:hover, header .main ul li a:active, header .main ul li a.active { color: #ffb300; background-color: #f8f6f1; }
 
-@media only screen and (max-width: 800px) { header .top { background-color: green; } }
-@media only screen and (min-width: 800px) and (max-width: 800px) { header .top ul li a { color: red; } }
+@media only screen and (max-width: 50em) { header .top ul li a { padding: 0 1rem; }
+  header .main .brand { float: none; display: block; padding: 0; margin: 1.5rem auto 0.5rem; text-align: center; }
+  header .main ul { text-align: center; }
+  header .main ul li { border: none; }
+  header .main ul li a { padding: 0 1.5rem; } }
+@media only screen and (max-width: 30em) { header .top .tel, header .top ul li:nth-child(3), header .top ul li:nth-child(4) { display: none; }
+  header .main ul li:first-child { display: none; }
+  header .main ul li a { font-weight: normal; padding: 0 0.5rem; } }
 /* 网站主要内容 */
 .container { width: 100%; }
 
@@ -74,23 +80,38 @@ header .main ul li a:hover, header .main ul li a:active, header .main ul li a.ac
 .trans-report { text-align: right; }
 .trans-report a { display: inline-block; padding: 1rem; line-height: 3rem; color: #fff; }
 
+@media only screen and (max-width: 50em) { .trans-data { padding: 1rem 0.5rem; }
+  .trans-data span { font-size: 1.2rem; }
+  .trans-data span.trans-money { font-size: 1.6rem; margin: 0; padding: 0; letter-spacing: inherit; -webkit-box-shadow: none; box-shadow: none; background: transparent; }
+  .trans-report a { font-size: 1.2rem; } }
+@media only screen and (max-width: 30em) { .transaction { padding: 0.5rem 0; }
+  .trans-data, .trans-report { float: none; text-align: center; }
+  .trans-data, .trans-report a { padding: 0; } }
 /* 滚动广告 */
-.ad { display: none; }
-
 .feature { width: 90%; margin: 2rem auto; font-size: 0; }
 .feature .item { display: inline-block; width: calc(33.33333333% - 3rem); padding: 1rem; font-size: 1.4rem; background-color: #fff; -webkit-box-shadow: 0 0 4px #ccc; box-shadow: 0 0 4px #ccc; }
 .feature .item + .item { margin-left: 1.5rem; }
 .feature .item h3 { display: inline-block; width: 40%; margin: 0; padding: 0; vertical-align: top; font-size: 3.3rem; text-align: center; color: #ff9900; }
 .feature .item p { display: inline-block; width: 55%; margin: 0; padding: 0; color: #999; }
 
+@media only screen and (min-width: 30.0625em) and (max-width: 50em) { .feature .item h3, .feature .item p { display: block; width: 100%; text-align: center; }
+  .feature .item h3 { font-size: 2.6rem; }
+  .feature .item p { font-size: 1.2rem; } }
+@media only screen and (max-width: 30em) { .feature { width: 96%; margin: 1rem auto; }
+  .feature .item { display: block; width: auto; }
+  .feature .item + .item { margin: 1rem 0 0; } }
 /* 最新公告 */
 .notice { width: 90%; margin: 2rem auto; font-size: 1.4rem; line-height: 3rem; background-color: #fff; -webkit-box-shadow: 0 0 4px #ccc; box-shadow: 0 0 4px #ccc; }
-.notice a { text-decoration: none; }
+.notice a { float: left; display: inline-block; width: 70%; margin-right: 2rem; text-decoration: none; }
 .notice a:first-child { text-overflow: ellipsis; overflow: hidden; white-space: nowrap; margin-left: 2rem; }
 .notice a:first-child::before { content: "最新公告：\00a0\00a0"; color: #aaa; }
 .notice a span { color: #999; font-size: 1.2rem; margin-right: 1rem; }
-.notice a.more { margin-right: 2rem; color: #ff9900; float: right; }
+.notice a.more { float: right; width: auto; margin-right: 2rem; color: #ff9900; }
 
+@media only screen and (max-width: 30em) { .notice { width: 96%; margin: 1rem auto; font-size: 1.2rem; }
+  .notice a:first-child { margin: 0 1rem; }
+  .notice a.more { margin-right: 1rem; }
+  .notice a span { display: none; } }
 /* 产品列表 */
 .product { width: 90%; margin: 2rem auto; font-size: 1.4rem; background-color: #f5f9fa; border-top: 2px solid #ff9900; -webkit-box-shadow: 0 0 4px #ccc; box-shadow: 0 0 4px #ccc; }
 .product h2 { float: left; width: 20%; margin-top: 3rem; text-align: center; font-size: 2.4rem; font-weight: normal; color: #635c51; }
@@ -108,10 +129,25 @@ header .main ul li a:hover, header .main ul li a:active, header .main ul li a.ac
 .product .product-content .item .info p span { display: block; font-size: 2.4rem; color: #ff9900; }
 .product .product-content .item .info p span i { font-size: 1.2rem; font-style: normal; color: #999; }
 .product .product-content .item .buy { float: left; width: calc(22% - 4.4rem); padding: 1rem; }
-.product .product-content .item .buy a { display: block; width: 90%; margin: 1.5rem auto; min-width: 12rem; line-height: 4rem; text-align: center; text-decoration: none; color: #fff; background-color: #ff9900; border-radius: 5px; }
+.product .product-content .item .buy a { display: block; width: 90%; margin: 1.5rem auto; line-height: 4rem; text-align: center; text-decoration: none; color: #fff; background-color: #ff9900; border-radius: 5px; }
 .product .product-content .item .buy a:hover, .product .product-content .item .buy a:active { background-color: #ffc468; }
-.product .product-content .item .buy a.disabled { background-color: #ccc; }
+.product .product-content .item .buy a.disabled { background-color: #ccc; cursor: not-allowed; }
 
+@media only screen and (max-width: 50em) { .product h2 { float: none; width: 100%; margin-top: 2rem; font-size: 2.2rem; }
+  .product h2 em { display: inline; font-size: 1.2rem; }
+  .product h2 em:first-child { margin-top: 0; }
+  .product .product-content { float: none; width: 100%; }
+  .product .product-content .item h3 { margin-bottom: 0; }
+  .product .product-content .item h3 em { font-size: 2.4rem; }
+  .product .product-content .item .info { padding: 1rem 1rem 0; font-size: 1.2rem; }
+  .product .product-content .item .info p span { font-size: 2rem; }
+  .product .product-content .item .buy a { margin: 0.5rem auto; } }
+@media only screen and (max-width: 30em) { .product h2 em:first-child:before { content: " "; display: table; }
+  .product .product-content .item h3 em { font-size: 2rem; margin-right: 0; }
+  .product .product-content .item .info { float: right; width: 70%; padding: 1rem 0; border: none; }
+  .product .product-content .item .info p span { font-size: 1.8rem; }
+  .product .product-content .item .buy { clear: both; float: none; width: 100%; padding: 1rem 0 2rem; }
+  .product .product-content .item .buy a { margin-top: 0; max-width: 26rem; } }
 /* 底部导航 */
 .footer-content { width: 90%; margin: 0 auto; }
 .footer-content .brand { float: left; display: block; -webkit-filter: grayscale(100%); filter: grayscale(100%); width: 20%; height: 35px; background: url(../img/logo@1x.png) no-repeat left; background-size: 150px 35px; }
@@ -119,6 +155,12 @@ header .main ul li a:hover, header .main ul li a:active, header .main ul li a.ac
 .footer-content ul li { font-size: 1.4rem; line-height: 2.4rem; }
 .footer-content ul li.title { font-size: 1.6rem; line-height: 3rem; }
 
+@media only screen and (max-width: 50em) { .footer-content .brand { display: none; }
+  .footer-content ul { width: 20%; }
+  .footer-content ul li { font-size: 1.2rem; line-height: 2rem; }
+  .footer-content ul li.title { font-size: 1.4rem; line-height: 2.5rem; } }
+@media only screen and (max-width: 30em) { .footer-content { width: 98%; }
+  .footer-content ul li.title { font-size: 1.2rem; line-height: 2rem; } }
 /* 底部 */
 footer { padding: 3rem 0; background-color: #fff; border-top: 2px solid #eee; }
 footer ul { text-align: center; }
@@ -132,5 +174,19 @@ footer ul li .icon-wlgs { width: 22px; height: 27px; background-position: -48px 
 footer ul li .icon-rzcx { width: 75px; height: 27px; background-position: 0 -320px; }
 footer ul li .icon-gs { width: 30px; height: 30px; margin-right: 0; background: url(https://os.alipayobjects.com/rmsportal/lybcjqloSPjMAFg.png) no-repeat; background-size: 30px; }
 footer p { text-align: center; color: #999; }
+
+/* ============== 打印样式 ============== */
+@media print { *, *::before, *::after { background: transparent; color: #000; -webkit-box-shadow: none; box-shadow: none; text-shadow: none; }
+  a, a:visited { text-decoration: underline; }
+  a[href]::after { content: "(" attr(href) ")"; }
+  abbr[title]::after { content: "(" attr(title) ")"; }
+  /* 使用#和javascript的超链接不打印href */
+  a[href^='#']::after, a[href^='javascript:']::after { content: ' '; }
+  pre, blockquote { border: 1px solid #999; page-break-inside: avoid; }
+  thead { display: table-header-group; }
+  tr, img { page-break-inside: avoid; }
+  img { max-width: 100%; }
+  p, h2, h3 { orphans: 3; widows: 3; }
+  h2, h3 { page-break-after: avoid; } }
 
 /*# sourceMappingURL=main.css.map */
