--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -144,7 +144,7 @@ header {
         border-left: 1px solid #f0ede9;
         a {
           display: inline-block;
-          padding: 0 3rem;
+          padding: 0 2.5rem;
           line-height: 5.5rem;
           font-size: 1.6rem;
           font-weight: bold;
@@ -162,21 +162,31 @@ header {
   }
 }
 
-@media only screen and (max-width: 800px){
-  header{
-    .top{
-      background-color: green;
+@media only screen and (max-width: 50em) {
+  header {
+    .top {
+      ul {
+        li {
+          a {
+            padding: 0 1rem;
+          }
+        }
+      }
     }
-  }
-}
-
-@media only screen and (min-width: 800px) and (max-width: 800px){
-  header{
-    .top{
-      ul{
-        li{
-          a{
-            color: red;
+    .main {
+      .brand {
+        float: none;
+        display: block;
+        padding: 0;
+        margin: 1.5rem auto 0.5rem;
+        text-align: center;
+      }
+      ul {
+        text-align: center;
+        li {
+          border: none;
+          a {
+            padding: 0 1.5rem;
           }
         }
       }
@@ -184,8 +194,32 @@ header {
   }
 }
 
-@media only screen and (max-width: 480px){
-  
+@media only screen and (min-width: 30.0625em) and (max-width: 50em) {
+}
+
+@media only screen and (max-width: 30em) {
+  header {
+    .top {
+      .tel,
+      ul li:nth-child(3),
+      ul li:nth-child(4) {
+        display: none;
+      }
+    }
+    .main {
+      ul {
+        li {
+          &:first-child {
+            display: none;
+          }
+          a {
+            font-weight: normal;
+            padding: 0 0.5rem;
+          }
+        }
+      }
+    }
+  }
 }
 
 /* 网站主要内容 */
@@ -236,9 +270,46 @@ header {
   }
 }
 
+@media only screen and (max-width: 50em) {
+  .trans-data {
+    padding: 1rem 0.5rem;
+    span {
+      font-size: 1.2rem;
+      &.trans-money {
+        font-size: 1.6rem;
+        margin: 0;
+        padding: 0;
+        letter-spacing: inherit;
+        box-shadow: none;
+        background: transparent;
+      }
+    }
+  }
+  .trans-report {
+    a {
+      font-size: 1.2rem;
+    }
+  }
+}
+
+@media only screen and (max-width: 30em) {
+  .transaction {
+    padding: 0.5rem 0;
+  }
+  .trans-data,
+  .trans-report {
+    float: none;
+    text-align: center;
+  }
+  .trans-data,
+  .trans-report a {
+    padding: 0;
+  }
+}
+
 /* 滚动广告 */
 .ad {
-  display: none;
+  // display: none;
 }
 
 .feature {
@@ -275,6 +346,39 @@ header {
   }
 }
 
+@media only screen and (min-width: 30.0625em) and (max-width: 50em) {
+  .feature {
+    .item {
+      h3,
+      p {
+        display: block;
+        width: 100%;
+        text-align: center;
+      }
+      h3 {
+        font-size: 2.6rem;
+      }
+      p {
+        font-size: 1.2rem;
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 30em) {
+  .feature {
+    width: 96%;
+    margin: 1rem auto;
+    .item {
+      display: block;
+      width: auto;
+      & + .item {
+        margin: 1rem 0 0;
+      }
+    }
+  }
+}
+
 /* 最新公告 */
 .notice {
   width: 90%;
@@ -284,6 +388,10 @@ header {
   background-color: #fff;
   box-shadow: 0 0 4px #ccc;
   a {
+    float: left;
+    display: inline-block;
+    width: 70%;
+    margin-right: 2rem;
     text-decoration: none;
     &:first-child {
       text-overflow: ellipsis;
@@ -301,9 +409,29 @@ header {
       margin-right: 1rem;
     }
     &.more {
+      float: right;
+      width: auto;
       margin-right: 2rem;
       color: #ff9900;
-      float: right;
+    }
+  }
+}
+
+@media only screen and (max-width: 30em) {
+  .notice {
+    width: 96%;
+    margin: 1rem auto;
+    font-size: 1.2rem;
+    a {
+      &:first-child {
+        margin: 0 1rem;
+      }
+      &.more {
+        margin-right: 1rem;
+      }
+      span {
+        display: none;
+      }
     }
   }
 }
@@ -338,50 +466,50 @@ header {
     width: 79.5%;
     border-left: 1px solid #eee;
     background-color: #fff;
-    .item{
+    .item {
       width: 100%;
-      & + .item{
+      & + .item {
         border-top: 1px solid #eee;
       }
-      h3{
+      h3 {
         float: left;
         width: 30%;
         margin: 1.5rem 0;
         font-size: 1.4rem;
         font-weight: normal;
         text-align: center;
-        em{
+        em {
           margin-right: 0.5rem;
           font-size: 3.6rem;
           font-style: normal;
           color: #8b999b;
         }
-        i{
+        i {
           display: block;
           font-size: 1.2rem;
           font-style: normal;
           color: #999;
         }
       }
-      .info{
+      .info {
         float: left;
         width: 48%;
         padding: 1rem;
         border-left: 1px solid #eee;
         border-right: 1px solid #eee;
         font-size: 14px;
-        p{
+        p {
           float: left;
           text-align: center;
           width: 56%;
-          &:last-child{
+          &:last-child {
             width: 40%;
           }
-          span{
+          span {
             display: block;
             font-size: 2.4rem;
             color: #ff9900;
-            i{
+            i {
               font-size: 1.2rem;
               font-style: normal;
               color: #999;
@@ -389,26 +517,118 @@ header {
           }
         }
       }
-      .buy{
+      .buy {
         float: left;
         width: calc(22% - 4.4rem);
         padding: 1rem;
-        a{
+        a {
           display: block;
           width: 90%;
           margin: 1.5rem auto;
-          min-width: 12rem;
+          // min-width: 12rem;
           line-height: 4rem;
           text-align: center;
           text-decoration: none;
           color: #fff;
           background-color: #ff9900;
           border-radius: 5px;
-          &:hover, &:active{
+          &:hover,
+          &:active {
             background-color: #ffc468;
           }
-          &.disabled{
+          &.disabled {
             background-color: #ccc;
+            cursor: not-allowed;
+          }
+        }
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 50em) {
+  .product {
+    h2 {
+      float: none;
+      width: 100%;
+      margin-top: 2rem;
+      font-size: 2.2rem;
+      em {
+        &:first-child {
+          margin-top: 0;
+        }
+        display: inline;
+        font-size: 1.2rem;
+      }
+    }
+    .product-content {
+      float: none;
+      width: 100%;
+      .item {
+        h3 {
+          margin-bottom: 0;
+          em {
+            font-size: 2.4rem;
+          }
+        }
+        .info {
+          padding: 1rem 1rem 0;
+          font-size: 1.2rem;
+          p {
+            span {
+              font-size: 2rem;
+            }
+          }
+        }
+        .buy {
+          a {
+            margin: 0.5rem auto;
+          }
+        }
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 30em) {
+  .product {
+    h2 {
+      em {
+        &:first-child {
+          &:before {
+            content: " ";
+            display: table;
+          }
+        }
+      }
+    }
+    .product-content {
+      .item {
+        h3 {
+          em {
+            font-size: 2rem;
+            margin-right: 0;
+          }
+        }
+        .info {
+          float: right;
+          width: 70%;
+          padding: 1rem 0;
+          border: none;
+          p {
+            span {
+              font-size: 1.8rem;
+            }
+          }
+        }
+        .buy {
+          clear: both;
+          float: none;
+          width: 100%;
+          padding: 1rem 0 2rem;
+          a {
+            margin-top: 0;
+            max-width: 26rem;
           }
         }
       }
@@ -417,10 +637,10 @@ header {
 }
 
 /* 底部导航 */
-.footer-content{
+.footer-content {
   width: 90%;
   margin: 0 auto;
-  .brand{
+  .brand {
     float: left;
     display: block;
     filter: grayscale(100%);
@@ -429,15 +649,48 @@ header {
     background: url(../img/logo@1x.png) no-repeat left;
     background-size: 150px 35px;
   }
-  ul{
+  ul {
     float: left;
     width: 15%;
-    li{
+    li {
       font-size: 1.4rem;
       line-height: 2.4rem;
-      &.title{
+      &.title {
         font-size: 1.6rem;
         line-height: 3rem;
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 50em) {
+  .footer-content {
+    .brand {
+      display: none;
+    }
+    ul {
+      width: 20%;
+      li {
+        font-size: 1.2rem;
+        line-height: 2rem;
+        &.title {
+          font-size: 1.4rem;
+          line-height: 2.5rem;
+        }
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 30em) {
+  .footer-content {
+    width: 98%;
+    ul {
+      li {
+        &.title {
+          font-size: 1.2rem;
+          line-height: 2rem;
+        }
       }
     }
   }
@@ -481,12 +734,12 @@ footer {
         margin-right: 13px;
         background-position: -401px -186px;
       }
-      .icon-wlgs{
+      .icon-wlgs {
         width: 22px;
         height: 27px;
         background-position: -48px -48px;
       }
-      .icon-rzcx{
+      .icon-rzcx {
         width: 75px;
         height: 27px;
         background-position: 0 -320px;
@@ -503,5 +756,65 @@ footer {
   p {
     text-align: center;
     color: #999;
+  }
+}
+
+/* ==============
+   打印样式
+   ============== */
+@media print {
+  *,
+  *::before,
+  *::after {
+    background: transparent;
+    color: #000;
+    box-shadow: none;
+    text-shadow: none;
+  }
+
+  a, a:visited {
+    text-decoration: underline;
+  }
+
+  a[href]::after{
+    content: '(' attr(href) ')';
+  }
+
+  abbr[title]::after{
+    content: '(' attr(title) ')';
+  }
+
+  /*
+  * 使用#和javascript的超链接不打印href
+  */
+  a[href^='#']::after,
+  a[href^='javascript:']::after{
+    content: ' ';
+  }
+
+  pre, blockquote{
+    border: 1px solid #999;
+    page-break-inside: avoid;
+  }
+
+  thead{
+    display: table-header-group;
+  }
+
+  tr, img{
+    page-break-inside: avoid;
+  }
+
+  img{
+    max-width: 100%;
+  }
+
+  p, h2, h3{
+    orphans: 3;
+    widows: 3;
+  }
+
+  h2, h3{
+    page-break-after: avoid;
   }
 }
